--- a/css1/style.css
+++ b/css1/style.css
@@ -13,6 +13,13 @@
 }
 
 
+
+
+.l-body {
+  list-style: none;
+}
+
+
 /* inner */
 
 
@@ -428,6 +435,13 @@ textarea::-webkit-input-placeholder {
 
 
 @media screen and (min-width: 768px) {
+
+
+
+.l-body {
+  list-style: none;
+}
+
 
 
 /* inner */
